# nasy-TG-words-bot

./: .gitignore  README.org  bot.py  pyproject.toml
